SCSS fix for create button alignment.
Due to a code refactor, the create button was becoming float: left
aligned.  This change makes it float: right and corrects the common
scss naming.

--- a/webhooks-extension/src/components/WebhookCreate/WebhookCreate.scss
+++ b/webhooks-extension/src/components/WebhookCreate/WebhookCreate.scss
@@ -96,20 +96,22 @@
     visibility: hidden;
   }
   
-  %cancel-submit-shared {
+  %submit-shared {
     font-weight: bold;
-    float: left;
+    
     padding-left: 15%;
     padding-right: 15%;
   }
 
   #cancel {
-    @extend %cancel-submit-shared;
+    @extend %submit-shared;
+    float: left;
     background-color: red; 
   }
   
   #submit {
-    @extend %cancel-submit-shared;
+    @extend %submit-shared;
+    float: right;
     background-color: green; 
   }
   
